# Source Files
SET(PACAP_SOURCES
    event/loop.cc)

# Build Targets
SET(PACAP_SHARED_LIBRARY_OUTPUT pacap)
ADD_LIBRARY(${PACAP_SHARED_LIBRARY} SHARED ${PACAP_SOURCES})
SET_TARGET_PROPERTIES(${PACAP_SHARED_LIBRARY} PROPERTIES OUTPUT_NAME ${PACAP_SHARED_LIBRARY_OUTPUT})
SET(PACAP_STATIC_LIBRARY_OUTPUT pacap)
ADD_LIBRARY(${PACAP_STATIC_LIBRARY} STATIC ${PACAP_SOURCES})
SET_TARGET_PROPERTIES(${PACAP_STATIC_LIBRARY} PROPERTIES OUTPUT_NAME ${PACAP_STATIC_LIBRARY_OUTPUT})

# Include Files
INCLUDE_DIRECTORIES(include)

# Compiler Options
IF(UNIX)
  SET(CMAKE_CXX_FLAGS "-std=c++0x -O2 -g")
  SET(CMAKE_CXX_FLAGS_DEBUG -DPACAP_DEBUG)
ENDIF(UNIX)

# Linker Options
IF(UNIX)
  TARGET_LINK_LIBRARIES(${PACAP_SHARED_LIBRARY} mpcap)
ENDIF(UNIX)
IF(UNIX)
  TARGET_LINK_LIBRARIES(${PACAP_STATIC_LIBRARY} mpcap)
ENDIF(UNIX)

# Installation
IF(UNIX)
  INSTALL(TARGETS ${PACAP_STATIC_LIBRARY} ARCHIVE DESTINATION lib)
  INSTALL(TARGETS ${PACAP_SHARED_LIBRARY} LIBRARY DESTINATION lib)
  INSTALL(FILES include/pacap.h DESTINATION include)
  INSTALL(DIRECTORY include/pacap DESTINATION include FILES_MATCHING PATTERN "*.h")
ENDIF(UNIX)
